Clean code and add sqlite

--- a/ContactBook/ContactBook.Maui/ContactBook.Maui.csproj
+++ b/ContactBook/ContactBook.Maui/ContactBook.Maui.csproj
@@ -75,4 +75,9 @@
       </MauiXaml>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ContactBook.BLL\ContactBook.BLL.csproj" />
+      <ProjectReference Include="..\ContactBook.DataProvider\ContactBook.DataProvider.csproj" />
+    </ItemGroup>
+
 </Project>
